syntax = "proto3";

package kvmrun.api.types.v2;

option go_package = "github.com/0xef53/kvmrun/api/types/v2;types";

message MachineOpts {
    message Firmware {
        string image = 1;
        string flash = 2;
    }
    message Memory {
        uint32 actual = 1;
        uint32 total = 2;
    }
    message CPU {
        uint32 actual = 1;
        uint32 total = 2;
        uint32 sockets = 3;
        string model = 4;
        uint32 quota = 5;
    }
    message InputDevice {
        string type = 1;
    }
    message Cdrom {
        string name = 1;
        string media = 2;
        string driver = 3;
        bool readonly = 4;
        uint32 bootindex = 5;
        string addr = 6;
    }
    message Disk {
        string path = 1;
        string driver = 2;
        uint32 iops_rd = 3;
        uint32 iops_wr = 4;
        uint32 bootindex = 5;
        string addr = 6;
    }
    message NetIface {
        string ifname = 1;
        string driver = 2;
        string hw_addr = 3;
        string ifup = 4;
        string ifdown = 5;
        string addr = 6;
        uint32 queues = 7;
    }
    message ChannelVSock {
        uint32 context_id = 2;
        string addr = 3;
    }
    message CloudInit {
        string path = 1;
        string driver = 2;
    }
    message Kernel {
        string image = 1;
        string initrd = 2;
        string modiso = 3;
        string cmdline = 4;
    }
    message HostDevice {
        string pci_addr = 1;
        bool multifunction = 2;
        bool primary_gpu = 3;
    }
    string machine_type = 1;
    Firmware firmware = 2;
    Memory memory = 3;
    CPU cpu = 4;
    repeated InputDevice inputs = 5;
    repeated Cdrom cdrom = 6;
    repeated Disk storage = 7;
    repeated NetIface network = 8;
    ChannelVSock vsock_device = 9;
    CloudInit cloudinit_drive = 10;
    Kernel kernel = 11;
    repeated HostDevice hostpci = 20;
}

message Machine {
    string name = 1;
    MachineOpts config = 2;
    MachineOpts runtime = 3;
    bool persistent = 4;
    MachineState state = 5;
    uint32 pid = 6;
    uint64 life_time = 7;
}

enum MachineState {
    NOSTATE = 0;
    STARTING = 1;
    RUNNING = 2;
    PAUSED = 3;
    SHUTDOWN = 4;
    INACTIVE = 5;
    CRASHED = 6;
    INCOMING = 7;
    MIGRATING = 8;
    MIGRATED = 9;
}

message MigrationOverrides {
    string name = 1;
    map<string, string> disks = 2;
    map<string, string> net_ifaces = 3;
}

message IncomingMigrationRequisites {
    uint32 incoming_port = 1;
    uint32 nbd_port = 2;
    uint32 pid = 3;
}

enum NetIfaceDriver {
    UNDEFINED_NET_DRIVER = 0;
    VIRTIO_NET_PCI = 1;
    RTL8139 = 2;
    E1000 = 3;
}

enum NetIfaceLinkState {
    UNDEFINED_LINK_STATE = 0;
    UP = 1;
    DOWN = 2;
}

enum DiskDriver {
    UNDEFINED_DISK_DRIVER = 0;
    VIRTIO_BLK_PCI = 1;
    SCSI_HD = 2;
    IDE_HD = 3;
}

enum CdromDriver {
    UNDEFINED_CDROM_DRIVER = 0;
    SCSI_CD = 1;
    IDE_CD = 2;
}

enum CloudInitDriver {
    UNDEFINED_CLOUDINIT_DRIVER = 0;
    CI_IDE_CD = 1;
    CI_FLOPPY = 2;
}

enum InputDeviceType {
    UNDEFINED_INPUT_TYPE = 0;
    USB_TABLET = 1;
}

message VNCRequisites {
    string password = 1;
    uint32 display = 2;
    uint32 port = 3;
    uint32 ws_port = 4;
}

message MachineEvent {
    message Timestamp {
        uint64 seconds = 1;
        uint64 microseconds = 2;
    }
    string type = 1;
    bytes data = 2;
    Timestamp timestamp = 3;
}
